# RecallAI

./: .dockerignore  .env.example  .gitignore  README.md  VPS_DEPLOY.md  app.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  requirements.txt
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  db.py  deps.py  main.py
backend/app/models/: __init__.py  job.py  user.py
backend/app/routers/: auth.py  jobs.py
backend/app/schemas/: __init__.py  job.py  user.py
backend/app/services/: ai_pipeline.py  key_crypto.py  markdown_to_pdf.py  pdf_extractor.py  progress.py
backend/app/templates/: pdf_styles.css  pyq_system_prompt.txt
backend/app/workers/: celery_app.py  tasks.py
client/: .dockerignore  Dockerfile  package-lock.json  package.json  proxy.ts
client/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
client/app/dashboard/: layout.tsx  page.tsx
client/app/privacy/: page.tsx
client/app/signin/: page.tsx
client/app/terms/: page.tsx
client/components/dashboard/: DashboardBackground.tsx  JobView.tsx  JobsList.tsx  NavLinks.tsx  ProgressStepper.tsx  ResultTabs.tsx  SettingsForm.tsx  UploadDropzone.tsx  UploadDropzoneLoader.tsx
client/lib/: api.ts  auth.ts  key-storage.ts  sse.ts  umami.ts
docs/: ARCHITECTURE.md  DEPLOY.md  PLAN.md  VPS_DEPLOY.md
infra/nginx/: nginx.conf
templates/: html_response_model_system_instructions.txt
utils/: render_pdf.py
(+16 files in other folders)
