[project]
name = "recallai-backend"
version = "2.0.0"
description = "RecallAI backend — FastAPI + Celery + WeasyPrint"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-multipart>=0.0.12",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "redis>=5.2",
  "celery[redis]>=5.4",
  "python-jose[cryptography]>=3.3",
  "slowapi>=0.1.9",
  "tenacity>=9.0",
  "httpx>=0.28",
  "google-genai>=1.14",
  "google-api-core>=2.0",
  "pymupdf>=1.25",
  "pytesseract>=0.3.13",
  "easyocr>=1.7",
  "opencv-python-headless>=4.10",
  "pillow>=11.0",
  "numpy>=2.0",
  "markdown2>=2.5",
  "weasyprint>=63",
  "cryptography>=44.0",
  "sse-starlette>=2.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
